--- a/public/scss/global/_variables.scss
+++ b/public/scss/global/_variables.scss
@@ -8,6 +8,7 @@
   --color-terciary: hsl(0, 0%, 52%);
   --color-text: hsl(200, 15%, 8%);
   --shadow: 0px 6px 5px -1px hsl(0, 0%, 52%);
+  --shadow-input: 1px 2px 7px -1px hsl(0, 0%, 52%);
 }
 
 [data-theme='dark'] {
