--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,3 +3,7 @@
 
 @import 'components/header';
 @import 'components/themeButton';
+@import 'components/searchForm';
+@import 'components/filter';
+
+@import 'pages/home';
