--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -5,5 +5,6 @@
 @import 'components/themeButton';
 @import 'components/searchForm';
 @import 'components/filter';
+@import 'components/card';
 
 @import 'pages/home';
