--- a/public/scss/components/_card.scss
+++ b/public/scss/components/_card.scss
@@ -1,18 +1,41 @@
 .card {
+  border-radius: 1rem;
+  box-shadow: var(--shadow-input);
+  overflow: hidden;
+  background-color: var(--color-primary);
+
   &__image {
+  }
+
+  &__flag {
     width: 100%;
+    height: 20rem;
+    object-fit: cover;
   }
 
   &__caption {
+    padding: 2rem 2rem 3rem;
   }
 
   &__name {
+    color: var(--color-text);
+    font-size: 2rem;
+    font-weight: 800;
+    margin-bottom: 1rem;
   }
 
   &__info {
+    display: flex;
+    font-size: 1.4rem;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
   }
 
   &__label {
+    font-weight: 600;
+    margin-right: 0.5rem;
   }
 
   &__text {
