--- a/public/scss/global/_variables.scss
+++ b/public/scss/global/_variables.scss
@@ -17,4 +17,5 @@
   --color-terciary: hsl(0, 0%, 52%);
   --color-text: hsl(0, 0%, 100%);
   --shadow: 0px 6px 5px -1px hsl(0, 0%, 52%);
+  --shadow-input: 1px 2px 7px -1px hsl(0, 0%, 52%);
 }
