--- a/public/scss/pages/_home.scss
+++ b/public/scss/pages/_home.scss
@@ -7,11 +7,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 144rem;
+    margin: 0 auto 5rem;
   }
 
   &__content {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 35rem));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 33rem));
     max-width: 144rem;
+    gap: 4rem;
+    justify-content: center;
   }
 }
