--- a/public/scss/components/_card.scss
+++ b/public/scss/components/_card.scss
@@ -3,14 +3,37 @@
   box-shadow: var(--shadow-input);
   overflow: hidden;
   background-color: var(--color-primary);
+  transition: all 0.3s;
+  cursor: pointer;
+
+  &:hover &__flag {
+    transform: scale(1.5);
+  }
+
+  &:hover &__overlay {
+    opacity: 0.1;
+  }
 
   &__image {
+    overflow: hidden;
+    position: relative;
+  }
+
+  &__overlay {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: 100;
+    transition: all 0.3s;
   }
 
   &__flag {
     width: 100%;
     height: 20rem;
     object-fit: cover;
+    transition: all 0.3s;
   }
 
   &__caption {
