--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'global/variables';
 @import 'global/base';
 
+@import 'components/layout';
 @import 'components/header';
 @import 'components/themeButton';
 @import 'components/searchForm';
