--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'global/variables';
 @import 'global/base';
+@import 'global/mixins';
 
 @import 'components/layout';
 @import 'components/header';
