--- a/public/scss/pages/_single.scss
+++ b/public/scss/pages/_single.scss
@@ -1,9 +1,12 @@
 .single {
   &__controls {
-    margin: 0 auto 5rem;
+    max-width: 144rem;
+    width: 100%;
+    margin: 3rem auto 5rem;
 
     @include responsive(desktop) {
-      margin: 0 auto 8rem;
+      margin: 8rem auto 8rem;
+      padding: 0 2rem;
     }
   }
 
@@ -18,7 +21,7 @@
     @include responsive(desktop) {
       flex-direction: row;
       justify-content: space-between;
-      padding: 0;
+      padding: 0 2rem;
     }
   }
 
