--- a/public/scss/pages/_home.scss
+++ b/public/scss/pages/_home.scss
@@ -7,8 +7,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     max-width: 144rem;
     margin: 0 auto 5rem;
+
+    @include responsive(desktop) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
 
   &__content {
@@ -18,5 +24,9 @@
     max-width: 144rem;
     gap: 4rem;
     justify-content: center;
+
+    @include responsive(desktop) {
+      column-gap: 3rem;
+    }
   }
 }
