--- a/public/scss/pages/_single.scss
+++ b/public/scss/pages/_single.scss
@@ -3,10 +3,10 @@
     max-width: 144rem;
     width: 100%;
     margin: 3rem auto 5rem;
+    padding: 0 2rem;
 
     @include responsive(desktop) {
       margin: 8rem auto 8rem;
-      padding: 0 2rem;
     }
   }
 
@@ -43,6 +43,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, max-content);
+        column-gap: 1rem;
       }
     }
 
@@ -116,11 +117,14 @@
 
     @include responsive(desktop) {
       font-size: 1.8rem;
+      grid-column: 1/ -1;
     }
   }
 
   &__countries {
     display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
   &__border {
