add loading state

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'global/mixins';
 
 @import 'components/layout';
+@import 'components/loading';
 @import 'components/mainButton';
 @import 'components/header';
 @import 'components/themeButton';
