--- a/public/scss/global/_variables.scss
+++ b/public/scss/global/_variables.scss
@@ -9,6 +9,8 @@
   --color-text: hsl(200, 15%, 8%);
   --shadow: 0px 6px 5px -1px hsl(0, 0%, 52%);
   --shadow-input: 1px 2px 7px -1px hsl(0, 0%, 52%);
+  --border-primary: 5px solid hsl(200, 15%, 8%);
+  --boder-color: hsl(200, 15%, 8%) transparent hsl(200, 15%, 8%) transparent;
 }
 
 [data-theme='dark'] {
@@ -18,4 +20,6 @@
   --color-text: hsl(0, 0%, 100%);
   --shadow: 0px 6px 5px -1px hsl(200, 15%, 8%);
   --shadow-input: 1px 2px 7px -1px hsl(200, 15%, 8%);
+  --border-primary: 20px solid hsl(0, 0%, 100%);
+  --boder-color: hsl(0, 0%, 100%) transparent hsl(0, 0%, 100%) transparent;
 }
